---
source: tests/integration.rs
expression: stderr
---
<fixture>:6:1: error[E_GROUP_END_KIND]: `end par` does not match open `alt` block
end par
^^^^^^^
